tests/negative/gold/block2_test.gold
tests/negative/block2_test.toit:7:5: error: Unexpected block
    : print it
    ^~~~~~~~~~
tests/negative/block2_test.toit:7:5: error: List elements may not be blocks
    : print it
    ^~~~~~~~~~
Compilation failed.
